# delia-rossignol-life

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: pages.yml
config/: offer-search.json  offer-source-audit.json  repository.json
data/knowledge/: profile.json  skills.json
data/style/: cv-ats-variants.json  cv-ats.json  cv-standard.json  delia.json
docs/: python-architecture.md
model/: concepts.yaml  model.yaml  relations.yaml
private/career-project/: delia-next-role-2026.json
private/originals/: feedback-delia-recherche-offres-2026-07-24.txt  precision-clientele-internationale-prada-sergio-2026-07-19.txt  precision-clientele-nationale-internationale-prada-sergio-2026-07-19.txt  precision-continuite-metier-perimetre-entrepreneurial-2026-07-20.txt  precision-entretiens-tresor-des-pirates-2026-07-19.txt  precision-lot-2-2026-07-19.txt  precision-lot-3-2026-07-19.txt  precision-mission-prada-2026-07-19.txt  (+12 more)
requirements/: constraints.txt
schemas/: application.schema.json  ats-cv-content-profile.schema.json  ats-cv-variants.schema.json  career-project.schema.json  cv-content-profile.schema.json  delia-style.schema.json  job-offer.schema.json  knowledge-entity.schema.json  offer-search-policy.schema.json  offer-source-audit.schema.json  profile-index.schema.json  proposal.schema.json  publication.schema.json  repository-config.schema.json  skills-index.schema.json  source-manifest.schema.json  template.schema.json  website-archive.schema.json
scripts/: build_site.py  build_standard_cv.py  delia_life.py  repo_flow.py  validate_skills.py
site/: publication.json
tests/: test_cli.py  test_core.py  test_documents.py  test_mental_model.py  test_offer_collection.py  test_offer_feedback_email.py  test_offer_review.py  test_offer_scan.py  test_offer_search.py  test_offer_semantic_regressions.py  test_repo_workflow.py  test_site.py  test_skills.py  test_storage.py
(+2788 files in other folders)
